@@ -43,26 +43,27 @@
 package com.itextpdf.styledxmlparser.resolver.resource;
 
 import com.itextpdf.io.util.MessageFormatUtil;
-import com.itextpdf.styledxmlparser.exceptions.StyledXMLParserException;
 
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 /**
  * Utilities class to resolve URIs.
  */
 public class UriResolver {
 
-    /** The base url. */
+    /**
+     * The base url.
+     */
     private URL baseUrl;
 
-    /** Indicates if the Uri refers to a local resource. */
+    /**
+     * Indicates if the Uri refers to a local resource.
+     */
     private boolean isLocalBaseUri;
 
     /**
@@ -71,6 +72,7 @@ public class UriResolver {
      * @param baseUri the base URI
      */
     public UriResolver(String baseUri) {
+        if (baseUri == null) throw new IllegalArgumentException("baseUri");
         resolveBaseUrlOrPath(baseUri);
     }
 
@@ -94,7 +96,6 @@ public class UriResolver {
         URL resolvedUrl = null;
         uriString = uriString.trim();
         // decode and then encode uri string in order to process unsafe characters correctly
-        String scheme = getUriStringScheme(uriString);
         uriString = UriEncodeUtil.encode(uriString);
         if (isLocalBaseUri) {
             // remove leading slashes in order to always concatenate such resource URIs: we don't want to scatter all
@@ -121,21 +122,33 @@ public class UriResolver {
     }
 
     /**
+     * Check if baseURI is local
+     *
+     * @return true if baseURI is local, otherwise false
+     */
+    public boolean isLocalBaseUri() {
+        return isLocalBaseUri;
+    }
+
+    /**
      * Resolves the base URI to an URL or path.
      *
      * @param base the base URI
      */
     private void resolveBaseUrlOrPath(String base) {
+        //TODO RND-1019
+        // this method produces
+        // a behavior that is not consistant in java vs .Net
+        //when resolving some characters ex. scaped backwards lash
         base = base.trim();
-        String scheme = getUriStringScheme(base);
-        base = UriEncodeUtil.encode(base);
-        baseUrl = baseUriAsUrl(base);
+        baseUrl = baseUriAsUrl(UriEncodeUtil.encode(base));
         if (baseUrl == null) {
             baseUrl = uriAsFileUrl(base);
         }
 
         if (baseUrl == null) {
-            throw new StyledXMLParserException(MessageFormatUtil.format("Invalid base URI: {0}", base));
+            // TODO styledxmlparserException?
+            throw new IllegalArgumentException(MessageFormatUtil.format("Invalid base URI: {0}", base));
         }
     }
 
@@ -171,7 +184,14 @@ public class UriResolver {
         URL baseAsFileUrl = null;
         try {
             Path path = Paths.get(baseUriString);
-            baseAsFileUrl = path.toAbsolutePath().normalize().toUri().toURL();
+            if (isPathRooted(path, baseUriString)) {
+                String str = "file:///" + encode(path, path.toAbsolutePath().normalize().toString());
+                baseAsFileUrl = new URI(str).toURL();
+            } else {
+                String str = encode(path, baseUriString);
+                URL base = Paths.get("").toUri().toURL();
+                baseAsFileUrl = new URL(base, str);
+            }
             isLocalBaseUri = true;
         } catch (Exception ignored) {
         }
@@ -179,29 +199,17 @@ public class UriResolver {
         return baseAsFileUrl;
     }
 
-    /**
-     * Get the scheme component of this URI.
-     */
-    private String getUriStringScheme(String uriString) {
-        String result = null;
-        Matcher matcher = Pattern.compile("^[a-zA-Z]([a-zA-Z]|\\d|\\+|-|\\.)*:").matcher(uriString);
-        if (matcher.find()) {
-            result = matcher.group().substring(0, matcher.group().indexOf(':'));
-        } else if (null != baseUrl) {
-            try {
-                result = baseUrl.toURI().getScheme();
-            } catch (URISyntaxException ignored) {
-            }
+    private String encode(Path path, String str) {
+        str = str.replace("\\", "/");
+        str = UriEncodeUtil.encode(str);
+        if (Files.isDirectory(path) && !str.endsWith("/")) {
+            str += "/";
         }
-        return result;
+        str = str.replaceFirst("/*\\\\*", "");
+        return str;
     }
 
-    /**
-     * Check if baseURI is local
-     *
-     * @return true if baseURI is local, otherwise false
-     */
-    public boolean isLocalBaseUri() {
-        return isLocalBaseUri;
+    private boolean isPathRooted(Path path, String str) {
+        return path.isAbsolute() || str.startsWith("/");
     }
 }
